# cognita

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tfyignore  CONTRIBUTING.md  CONTRIBUTIONGUIDE.md  Contributing.md  GETTING_STARTED.md  Makefile  RAG.ipynb  RAG_local.ipynb  README.md  README_NIX.md  compose.env  deploy.sh  docker-compose.yaml  env.example  env.local.example  frontend.yaml  indexer.yaml  local.metadata.json  local.metadata.yaml  local_rag.py  logs.txt  models_config.json  models_config.sample.json  models_config.sample.yaml  models_config.truefoundry.yaml  qdrant.yaml  sample-requests.txt  serve.yaml  stream_test.py  test_confluence_loader.py  test_json_parser.py  test_universal_parser.py  truefoundry.yaml
backend/: Dockerfile  README.md  __init__.py  additional.requirements.txt  app.py  constants.py  embedder.requirements.txt  indexer.py  indexer_job.py  logger.py  metadatastore.requirements.txt  pyproject.toml  requirements.txt  rerankers.requirements.txt  settings.py  types.py  utils.py  vectordb.requirements.txt
backend/cli/: __main__.py
backend/common/: common.py
backend/common/db/: qdrant.py
backend/common/embedder/: __init__.py  instruct.py  tfy_embeddings.py
backend/crawlers/htmlToMarkdown/: __init__.py  cli.py  crawl_md.py
backend/database/: schema.prisma
backend/indexer/: argument_parser.py  indexer.py  main.py  types.py
backend/migration/: qdrant_migration.py  utils.py
backend/modules/dataloaders/: README.md  __init__.py  artifactloader.py  carbondataloader.py  confluenceloader.py  githubloader.py  loader.py  local_dir_loader.py  localdirloader.py  mlfoundryloader.py  structured_loader.py  tfdocsloader.py  truefoundry_loader.py  truefoundryloader.py  web_loader.py  webloader.py
backend/modules/embedder/: __init__.py  embedder.py  embedder.requirements.txt  embedding.requirements.txt  embedding_svc.py  instruct.py  mixbread_embedder.py  tfy_embeddings.py  truefoundry_embedder.py
backend/modules/llms/: tfy_playground_llm.py  tfy_qa_retrieval.py  tfy_vector_retriever.py  truefoundry_llm.py
backend/modules/metadata_store/: __init__.py  base.py  client.py  console_store.py  local.py  mlfoundry.py  mlfoundry_store.py  models.py  mongolocal.py  prisma_store.py  prismastore.py  truefoundry.py
backend/modules/model_gateway/: __init__.py  audio_processing_svc.py  model_gateway.py  reranker_svc.py
backend/modules/parsers/: README.md  __init__.py  audioparser.py  codeparser.py  customparser.py  jsonparser.py  markdownparser.py  (+15 more)
backend/serve/: Dockerfile  README.md  app.py  base.py  requirements.txt  tfy_playground_llm.py
backend/server/: app.py  decorators.py  service.py
backend/train/: Dockerfile  README.md  requirements.txt  train.py  utils.py
backend/utils/: base.py  decorator.py  logger.py  utils.py
(+283 files in other folders)
