[tool.poetry]
name = "cognita"
version = "0.0.0"
description = "Cognita"
authors = ["Abhishek Choudhary <abhichoudhary06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
async-timeout = { version = ">=4.0.3,<5.0.0" }
beautifulsoup4 = { version = ">=4.12.2,<5.0.0" }
fastapi = { version = ">=0.109.1,<0.110.0" }
GitPython = { version = ">=3.1.43,<4.0.0" }
gunicorn = { version = ">=22.0.0,<23.0.0" }
huggingface-hub = { version = ">=0.20.3,<1.0.0" }
langchain = { version = ">=0.1.9,<0.2.0" }
langchain-community = { version = ">=0.0.24,<0.1.0" }
langchain-core = { version = ">=0.1.30,<0.2.0" }
langchain-openai = { version = ">=0.0.8,<0.1.0" }
markdown-crawler = { version = ">=0.0.8,<0.1.0" }
markdownify = { version = ">=0.11.6,<0.12.0" }
openai = { version = ">=1.16.2,<2.0.0" }
opencv-python = { version = ">=4.5.0,<5.0.0" }
orjson = { version = ">=3.9.15,<4.0.0" }
pillow = { version = ">=10.2.0,<11.0.0" }
pre-commit = { version = ">=3.7.0,<4.0.0" }
pydantic = { version = ">=1.10.13,<2.0.0" }
PyMuPDF = { version = ">=1.23.6,<2.0.0" }
python-dotenv = { version = ">=1.0.1,<2.0.0" }
python-multipart = { version = ">=0.0.9,<0.1.0" }
redis = { version = ">=5.0.1,<6.0.0" }
rich = { version = ">=12.0.0,<14.0.0" }
rich-click = { version = ">=1.2.1,<2.0.0" }
requests = { version = ">=2.32.2,<3.0.0" }
tiktoken = { version = ">=0.6.0,<0.7.0" }
truefoundry = { version = ">=0.2.4,<0.3.0", extras = ["ml"] }
uvicorn = { version = ">=0.23.2,<0.24.0" }

torch = { version = ">=2.2.1,<3.0.0", optional = true }
sentence-transformers = { version = ">=2.5.1,<3.0.0", optional = true }
deepdoctection = { version = ">=0.32.0,<0.33.0", optional = true }
timm = { version = ">=0.9.16,<0.10.0", optional = true }
python-doctr = { version = ">=0.8.1,<0.9.0", optional = true }
qdrant-client = { version = ">=1.7.3,<2.0.0", optional = true }
singlestoredb = { version = ">=1.0.4,<2.0.0", optional = true }
weaviate-client = { version = ">=3.25.3,<4.0.0", optional = true }

[tool.poetry.extras]
torch = ["torch"]
sentence-transformers = ["sentence-transformers"]
table-detection = ["deepdoctection", "timm", "python-doctr"]
qdrant = ["qdrant-client"]
weaviate = ["weaviate-client"]
singlestore = ["singlestoredb"]

[tool.poetry.group.dev.dependencies]
black = { version = "^24.3.0" }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# [tool.poetry.plugins."console_scripts"]
# cognita = "cognita.cli.__main__:main"

[tool.black]
line-length = 88
safe = true
target_version = ["py39", "py310"]

[tool.isort]
profile = "black"